fix: fix ultraman name too long and cover the name

--- a/web/assets/style.css
+++ b/web/assets/style.css
@@ -185,9 +185,9 @@ video {
     font-size: 50px;
     font-weight: bold;
     text-transform: uppercase;
-    white-space: nowrap;
     overflow: hidden;
     margin-bottom: 25px;
+    overflow-wrap: break-word;
 }
 
 .ultraman-profile-description {
